FINISH SIMPLE CALENDAR

--- a/app/views/shared/_brand.html.haml
+++ b/app/views/shared/_brand.html.haml
@@ -1,5 +1,5 @@
 .ui.fixed-menu.blue.inverted.menu
-  .container
-    %a.title.item
-      %i.home.icon
-      home
+	.container
+		=link_to(calendars_path, :class => "title item") do
+			%i.home.icon
+			2015 高中英知研習營
