--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,7 +1,13 @@
 .ui.vertical.pointing.menu
-	= link_to(stores_path, :class => "active item") do
-		店家資訊
-		%i.red.home.icon
-	%a.item
-		%i.yellow.browser.icon
-		揪團訂餐
+	/ = link_to(stores_path, :class => "active item") do
+	/ 	店家資訊
+	/ 	%i.red.home.icon
+	/ %a.item
+	/ 	%i.yellow.browser.icon
+	/ 	揪團訂餐
+	= link_to(calendars_path, :class => "active item") do
+		行事曆
+		%i.red.calendar.circular.inverted.icon
+	= link_to(contacts_path, :class => "item") do
+		通訊錄
+		%i.yellow.call.circular.inverted.icon
