--- a/app/views/stores/index.html.haml
+++ b/app/views/stores/index.html.haml
@@ -1,6 +1,5 @@
 %h1 店家資訊
-.ui.horizontal.divider
-	line
+.ui.divider
 = link_to(new_store_path,:class => 'ui fluid teal labeled icon button') do
 	新增店家
 	%i.add.icon
