完成通訊錄及匯出通訊錄

--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -1,4 +1,6 @@
-%h1 行事曆
+%h1 
+  行事曆
+  %i.calendar.icon
 .ui.divider
 = link_to(new_calendar_path,:class => 'ui fluid teal labeled icon button') do
   新增行事曆
