--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -5,21 +5,32 @@
       %ul
         - @contact.errors.full_messages.each do |msg|
           %li= msg
-
   .field
-    = f.label :name
+    %label 名稱
     = f.text_field :name
+  .two.fields
+    .field
+      %label 群組
+      = f.text_field :groups
+    .field
+      %label 職稱 
+      = f.text_field :title
+  .two.fields
+    .field
+      %label 電話
+      = f.text_field :phone
+    .field
+      %label 信箱
+      = f.text_field :email
   .field
-    = f.label :group
-    = f.text_field :group
-  .field
-    = f.label :phone
-    = f.text_field :phone
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :title
-    = f.text_field :title
-  .actions
-    = f.submit 'Save'
+    %label 上傳圖片
+    = f.file_field :image
+  .ui.divider
+    .ui.buttons.2.fluid
+      = button_tag(type: 'submit', class: "ui teal button") do
+        送出
+        %i.checkmark.icon
+      .or
+      = link_to(contacts_path, :class => 'ui blue button') do
+        返回
+        %i.reply.icon
