--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,6 @@
     = render 'shared/brand'
     .ui.page.grid
       .row
-        .four.wide.column
-          = render 'shared/menu'
-        .twelve.wide.column.ui.card
+        = render 'shared/menu'
+        .thirteen.wide.column.ui.card
           = yield
