--- a/app/views/shared/_brand.html.haml
+++ b/app/views/shared/_brand.html.haml
@@ -1,4 +1,4 @@
-.ui.fixed-menu.blue.inverted.menu
+.ui.large.fixed-menu.blue.inverted.menu
 	.container
 		=link_to(calendars_path, :class => "title item") do
 			%i.home.icon
