--- a/app/views/contacts/edit.html.haml
+++ b/app/views/contacts/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing contact
-
-= render 'form'
-
-= link_to 'Show', @contact
-\|
-= link_to 'Back', contacts_path
+%h1 
+	編輯通訊錄
+	%i.call.icon
+.ui.horizontal.divider
+	通訊錄內容
+.ui.form
+	= render 'form'
