--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New contact
-
-= render 'form'
-
-= link_to 'Back', contacts_path
+%h1 
+	新增通訊錄
+	%i.call.icon
+.ui.horizontal.divider
+	通訊錄內容
+.ui.form
+	= render 'form'
