--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,4 +1,4 @@
-.ui.vertical.pointing.menu
+.ui.vertical.menu.column.three.wide.column
 	/ = link_to(stores_path, :class => "active item") do
 	/ 	店家資訊
 	/ 	%i.red.home.icon
@@ -7,7 +7,7 @@
 	/ 	揪團訂餐
 	= link_to(calendars_path, :class => "active item") do
 		行事曆
-		%i.red.calendar.circular.inverted.icon
+		%i.red.calendar.icon
 	= link_to(contacts_path, :class => "item") do
 		通訊錄
-		%i.yellow.call.circular.inverted.icon
+		%i.yellow.call.icon
