完成通訊錄修改

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,10 +13,8 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap";
 @import "semantic-ui";
 .fixed-menu{
 	margin-top: 0px !important;
-}
-.container{
-	margin-left: 88px;
 }
