--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,11 +1,11 @@
-.ui.vertical.menu.column.three.wide.column
+.ui.left.vertical.menu.column.three.wide.column
 	/ = link_to(stores_path, :class => "active item") do
 	/ 	店家資訊
 	/ 	%i.red.home.icon
 	/ %a.item
 	/ 	%i.yellow.browser.icon
 	/ 	揪團訂餐
-	= link_to(calendars_path, :class => "active item") do
+	= link_to(calendars_path, :class => "item") do
 		行事曆
 		%i.red.calendar.icon
 	= link_to(contacts_path, :class => "item") do
