完成初步使用者登入功能

--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -11,7 +11,7 @@
     下載通訊錄
     %i.download.icon
 %br
-%ul.nav.nav-tabs(id = "myTab" role="tablist")
+%ul.nav.nav-tabs.nav-justified(id = "myTab" role="tablist")
   %li.active.time
     %a.labelTab(href = "#tab1" data-toggle = "tab" )
       高研本部
