--- a/app/views/contacts/_tab3.html.haml
+++ b/app/views/contacts/_tab3.html.haml
@@ -5,7 +5,7 @@
         .ui.fluid.yellow.card
           .image
             = link_to(edit_contact_path(contact), :class => 'ui image') do
-              = image_tag contact.image_url(:thumb).to_s
+              = image_tag contact.image_url.to_s
           .content
             .header= link_to contact.name, edit_contact_path(contact)
             .meta= contact.title
